feat: Implement K8s Deployment Tracker Operator Kubernetes Deployment 상태를 모니터링하고 알림을 제공하는 Operator를 구현했습니다: - Deployment 상태 실시간 추적 및 알림 기능 - Slack/Email 알림 지원 - CRD를 통한 모니터링 설정 관리 - 자동화된 테스트 및 CI/CD 파이프라인 구성 Implemented K8s Deployment Tracker Operator with the following features: - Real-time Deployment status tracking and notification - Slack/Email notification support - Monitoring configuration through CRD - Automated testing and CI/CD pipeline setup Signed-off-by: [ddukbg] <wowrebong@gmail.com>
Signed-off-by: ddukbg <wowrebong@gmail.com>

--- a/config/samples/deployment_tracker_my_app.yaml
+++ b/config/samples/deployment_tracker_my_app.yaml
@@ -8,3 +8,5 @@ spec:
   notify:
     slack: "https://hooks.slack.com/services/..."
     email: "alert@example.com"
+    retryCount: 3
+    alertOnFail: true
