--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,28 +1,37 @@
-name: Go CI
-
+name: Test
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out the repository
-      uses: actions/checkout@v2
-
+    - uses: actions/checkout@v2
+    
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v2
       with:
         go-version: '1.16'
-
+    
     - name: Install dependencies
-      run: go mod download
-
+      run: |
+        go mod download
+        
     - name: Run tests
-      run: go test ./... -v
+      run: make test
+      
+    - name: Build
+      run: make build
+    
+    - name: Run code coverage
+      run: |
+        go test ./... -coverprofile=coverage.txt -covermode=atomic
+        
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.txt
+        flags: unittests
