--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,23 +15,23 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.16'
-    
-    - name: Install dependencies
+        
+    - name: Verify dependencies
       run: |
-        go mod download
+        go mod verify
         
     - name: Run tests
       run: make test
       
     - name: Build
       run: make build
-    
-    - name: Run code coverage
+      
+    - name: Run integration tests
       run: |
-        go test ./... -coverprofile=coverage.txt -covermode=atomic
+        make integration-test
         
-    - name: Upload coverage report
-      uses: codecov/codecov-action@v1
+    - name: Upload test coverage
+      uses: actions/upload-artifact@v2
       with:
-        file: ./coverage.txt
-        flags: unittests
+        name: coverage-report
+        path: cover.out
