--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,10 +9,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4    # v2에서 v4로 업그레이드
     
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5    # v2에서 v5로 업그레이드
       with:
         go-version: '1.16'
         
@@ -31,7 +31,7 @@ jobs:
         make integration-test
         
     - name: Upload test coverage
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3    # v2에서 v3로 업그레이드
       with:
         name: coverage-report
         path: cover.out
