--- a/config/crd/deployment_tracker.yaml
+++ b/config/crd/deployment_tracker.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: deploymenttrackers.ddukbg
+  name: deploymenttrackers.ddukbg.k8s
 spec:
-  group: ddukbg
+  group: ddukbg.k8s
   names:
     kind: DeploymentTracker
     plural: deploymenttrackers
@@ -15,7 +15,7 @@ spec:
   - name: v1alpha1
     served: true
     storage: true
-    additionalPrinterColumns:  # 추가: kubectl get 명령어에서 보이는 컬럼
+    additionalPrinterColumns:
     - name: Ready
       type: boolean
       jsonPath: .status.ready
@@ -25,11 +25,11 @@ spec:
     schema:
       openAPIV3Schema:
         type: object
-        required: ["spec"]  # spec을 필수값으로 지정
+        required: ["spec"]
         properties:
           spec:
             type: object
-            required: ["deploymentName"]  # deploymentName을 필수값으로 지정
+            required: ["deploymentName"]
             properties:
               deploymentName:
                 type: string
@@ -40,10 +40,10 @@ spec:
                 properties:
                   slack:
                     type: string
-                    pattern: '^https://hooks\.slack\.com/services/.*$'  # Slack URL 형식 검증
+                    pattern: '^https://hooks\.slack\.com/services/.*$'
                   email:
                     type: string
-                    pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'  # 이메일 형식 검증
+                    pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
                   retryCount:
                     type: integer
                     minimum: 0
@@ -65,4 +65,4 @@ spec:
               message:
                 type: string
     subresources:
-      status: {}  # status 서브리소스 활성화
+      status: {}
