fix: Improve deployment tracker functionality
코어 기능 개선:
- 이미지 변경 감지 로직 개선
- 이미지 다이제스트 기반 비교 구현
- RBAC 권한 추가 (events 리소스)
- 중복 알림 발송 방지

Core functionality improvements:
- Enhanced image change detection
- Implemented image digest-based comparison
- Added RBAC permissions (events resource)
- Prevented duplicate notifications

Signed-off-by: ddukbg <wowrebong@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,3 +1,4 @@
+# config/rbac/role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -8,10 +9,10 @@ rules:
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 - apiGroups: ["apps"]
   resources: ["deployments"]
-  verbs: ["get", "list", "watch"]
+  verbs: ["get", "list", "watch", "update", "patch"]
 - apiGroups: [""]
-  resources: ["events"]
-  verbs: ["create"]
+  resources: ["events"]  # events 리소스 추가
+  verbs: ["create", "patch"]
 - apiGroups: ["ddukbg.k8s"]
   resources: ["deploymenttrackers/status"]
   verbs: ["get", "update", "patch"]
