fix: Improve deployment tracker functionality
코어 기능 개선:
- deploymenttrackers -> resoucetrackers 변경
- 이미지 변경 감지 로직 개선
- 이미지 다이제스트 기반 비교 구현
- RBAC 권한 변경 (resources type)
- 중복 알림 발송 방지

Core functionality improvements:
- Changed Resource Type deploymenttrackers -> resoucetrackers
- Enhanced image change detection
- Implemented image digest-based comparison
- Changed RBAC permissions (resources type)
- Prevented duplicate notifications

Signed-off-by: ddukbg <wowrebong@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: deployment-tracker-role
 rules:
 - apiGroups: ["ddukbg.k8s"]
-  resources: ["deploymenttrackers"]
+  resources: ["resourcetrackers"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 - apiGroups: ["apps"]
   resources: ["deployments"]
@@ -14,5 +14,5 @@ rules:
   resources: ["events"]  # events 리소스 추가
   verbs: ["create", "patch"]
 - apiGroups: ["ddukbg.k8s"]
-  resources: ["deploymenttrackers/status"]
+  resources: ["resourcetrackers/status"]
   verbs: ["get", "update", "patch"]
