--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -2,23 +2,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  name: deployment-tracker-role
 rules:
-- apiGroups: [""]  # Pod는 core API group에 속함
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: ["apps"]  # StatefulSet은 apps API group에 속함
-  resources: ["statefulsets"]
-  verbs: ["get", "list", "watch"]
+- apiGroups: [""]  # Core API Group
+  resources: ["pods", "events", "namespaces"]
+  verbs: ["get", "list", "watch", "create", "update", "patch"]
 - apiGroups: ["apps"]
-  resources: ["deployments"]
+  resources: ["deployments", "statefulsets"]
   verbs: ["get", "list", "watch", "update", "patch"]
 - apiGroups: ["ddukbg.k8s"]
-  resources: ["resourcetrackers"]
+  resources: ["resourcetrackers", "resourcetrackers/status"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
-- apiGroups: ["ddukbg.k8s"]
-  resources: ["resourcetrackers/status"]
-  verbs: ["get", "update", "patch"]
-- apiGroups: [""]
-  resources: ["events"]
-  verbs: ["create", "patch"]
